Pinging Servers in background. Cleanup on uninstall. MISC fixes
* Fixed firefox build scripts to revert file names if build script
  is cancelled early

* Fix css height issues which only affect Firefox

* Tearing down proxy and web rtc settings was not working in firefox.
  Should now be functional, implemented using addon method for detecting
  uninstall event.

* Updating servers now happens in the background script every 4 hours.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,6 +7,7 @@
 html, body {
   max-height: $app-height;
   overflow-x: -moz-hidden-unscrollable;
+  overflow-y: -moz-hidden-unscrollable;
 }
 
 body {
@@ -19,6 +20,17 @@ body {
   margin: 0;
   padding: 0;
 }
+
+@-moz-document url-prefix() {
+  body {
+    overflow-y: -moz-hidden-unscrollable;
+    height: rem(510);
+  }
+  #tutorial {
+    height: rem(510) !important;
+  }
+}
+
 
 ::-webkit-scrollbar {
   width: 4px;
