--- a/src/app/account/share/share.component.html
+++ b/src/app/account/share/share.component.html
@@ -1,5 +1,5 @@
 <div id="sub-menu" class="account" style="color: white">
-  <div id="header" (click)="goToView('app-account')" class="bottom-separator">
+  <div id="header" (click)="goToView('app-account')" class="page-header bottom-separator">
     <span class="back-icon">&#x3008;</span>Share
   </div>
 
