--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -6,7 +6,7 @@
     </a>
     <img class="title" src="/assets/header-logo-big.svg" alt="">
     <a routerLink="/settings" class="btn__settings">
-      <img src="/assets/gear.png" alt="">
+      <img class="gear" src="/assets/gear.png" alt="">
     </a>
     <div id="cypher-punk-enabled-switch" class="switch">
       <label class="label-switch">
