--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div id="sub-menu">
-  <div id="header" routerLink="/" routerLinkActive="active" class="bottom-separator">
+  <div id="header" routerLink="/" routerLinkActive="active" class="page-header bottom-separator">
     <span class="back-icon">&#x3008;</span>{{title}}
   </div>
 
