--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,14 +4,15 @@ $app-height: 600px;
 
 
 // Colors
-$gray-med:        #999;
-$gray-dark-trans: rgba(102, 102, 102, 0.85);
-$color-error:     #292844;
-$overlay--hover:  rgba(#0d1e26, 0.25);
-$overlay--dark:   #0d1e26;
-$primary-bg:         #163238;
-$primary-bg-dark:    #0d1e26;
+$gray-med:          #999;
+$gray-dark-trans:   rgba(102, 102, 102, 0.85);
+$color-error:       #292844;
+$overlay--hover:    rgba(#0d1e26, 0.25);
+$overlay--dark:     #0d1e26;
+$primary-bg:        #163238;
+$primary-bg-light:  #19474c;
+$primary-bg-dark:   #0d1e26;
 
 
 // Frames
-$border--separator: 1px solid darken(#010010, 25%);
+$border--separator: 1px solid darken(#0d1e26, 25%);
