--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <div class="location last">
+      <div class="location last" routerLink="/location">
         <div class="flag-container small square">
           <img *ngIf="faviconUrl" src="{{faviconUrl}}" />
         </div>
