--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -63,7 +63,7 @@
       text-align: center;
       position: relative;
       z-index: 2;
-      &.last { @include omega; }
+      &.last { @include omega; cursor: pointer; }
 
       .flag-container {
         width: rem(70);
